pequena alteração de texte

--- a/Desafio 10/Páginas/index.html
+++ b/Desafio 10/Páginas/index.html
@@ -80,6 +80,7 @@
         </main>
          <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
          </p>
+         <p>Pequena alteração </p>
     </main>
     <footer>
         <h3>Site criado por Gustavo Guanabara para o CursoemVideo.</h3>
